--- a/composer.json
+++ b/composer.json
@@ -1,60 +1,62 @@
 {
-	"name" : "vitormattos/blueprint-sdk-maker",
-	"description" : "Create SDK client from API Blueprint",
-	"license" : "MIT",
-	"type" : "library",
-	"homepage" : "https://github.com/vitormattos/blueprint-sdk-maker",
-	"authors" : [{
-			"name" : "Vitor Mattos",
-			"homepage" : "https://github.com/vitormattos"
-		}
-	],
-	"support" : {
-		"source" : "https://github.com/vitormattos/blueprint-sdk-maker/tree/master",
-		"issues" : "https://github.com/vitormattos/blueprint-sdk-maker/issues"
-	},
-	"keywords" : [
-		"api",
-		"blueprint",
-		"parser",
-		"apib"
-	],
-	"autoload" : {
-		"psr-4" : {
-			"BlueprintSdkMaker\\" : "src/Sdk"
-		}
-	},
-	"require" : {
-		"php" : ">=7.2",
-		"symfony/console" : "^3.2",
-		"brianseitel/oasis-mson-parser" : "dev-newest"
-	},
-	"require-dev" : {
-		"nikic/php-parser": "^4.2",
-		"squizlabs/php_codesniffer" : "3.*",
-		"overtrue/phplint": "^1.1",
-		"php-coveralls/php-coveralls": "^2.1",
-		"phpunit/phpunit": "^8",
-		"phpstan/phpstan": "^0.11.16"
-	},
-	"scripts" : {
-		"phpcs" : "phpcs --standard=PSR2 -n src",
-		"phpcbf" : "phpcbf --standard=PSR2 -n src",
-		"unit" : "php -d phar.readonly=0 vendor/bin/phpunit --coverage-clover ./tests/log/clover.xml --colors=always",
-		"phplint": "phplint ./ --exclude=vendor",
-		"phpstan" : "phpstan analyse src --level 7",
-		"test" : [
-			"@phplint",
-			"@unit",
-			"@phpcs"
-		]
-	},
-	"bin" : [
-		"bin/blueprint-sdk-maker"
-	],
-	"repositories" : [{
-			"type" : "vcs",
-			"url" : "https://github.com/vitormattos/oasis-mson-parser"
-		}
-	]
+  "name": "olegabr/blueprint-sdk-maker",
+  "description": "Create SDK client from API Blueprint",
+  "license": "MIT",
+  "type": "library",
+  "homepage": "https://github.com/olegabr/blueprint-sdk-maker",
+  "authors": [
+    {
+      "name": "Vitor Mattos",
+      "homepage": "https://github.com/olegabr"
+    }
+  ],
+  "support": {
+    "source": "https://github.com/olegabr/blueprint-sdk-maker/tree/master",
+    "issues": "https://github.com/olegabr/blueprint-sdk-maker/issues"
+  },
+  "keywords": [
+    "api",
+    "blueprint",
+    "parser",
+    "apib"
+  ],
+  "autoload": {
+    "psr-4": {
+      "BlueprintSdkMaker\\": "src/Sdk"
+    }
+  },
+  "require": {
+    "php": ">=7.2",
+    "symfony/console": "^3.2",
+    "brianseitel/oasis-mson-parser": "dev-master"
+  },
+  "require-dev": {
+    "nikic/php-parser": "^4.2",
+    "squizlabs/php_codesniffer": "3.*",
+    "overtrue/phplint": "^1.1",
+    "php-coveralls/php-coveralls": "^2.1",
+    "phpunit/phpunit": "^8",
+    "phpstan/phpstan": "^0.11.16"
+  },
+  "scripts": {
+    "phpcs": "phpcs --standard=PSR2 -n src",
+    "phpcbf": "phpcbf --standard=PSR2 -n src",
+    "unit": "php -d phar.readonly=0 vendor/bin/phpunit --coverage-clover ./tests/log/clover.xml --colors=always",
+    "phplint": "phplint ./ --exclude=vendor",
+    "phpstan": "phpstan analyse src --level 7",
+    "test": [
+      "@phplint",
+      "@unit",
+      "@phpcs"
+    ]
+  },
+  "bin": [
+    "bin/blueprint-sdk-maker"
+  ],
+  "repositories": [
+    {
+      "type": "vcs",
+      "url": "https://github.com/olegabr/oasis-mson-parser"
+    }
+  ]
 }
