--- a/composer.json
+++ b/composer.json
@@ -28,10 +28,10 @@
   "require": {
     "php": ">=7.2",
     "symfony/console": "^3.2",
-    "brianseitel/oasis-mson-parser": "dev-master"
+    "brianseitel/oasis-mson-parser": "dev-master",
+    "nikic/php-parser": "^4.2"
   },
   "require-dev": {
-    "nikic/php-parser": "^4.2",
     "squizlabs/php_codesniffer": "3.*",
     "overtrue/phplint": "^1.1",
     "php-coveralls/php-coveralls": "^2.1",
